--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon server.js",
+    "server": "env-cmd -f config/config.env nodemon server.js",
     "client": "npm start --prefix ../client",
     "dev": "concurrently \"npm run server\"  \"npm run client\"  "
   },
@@ -14,10 +14,14 @@
     "bcrypt": "^3.0.8",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "socket.io": "^2.3.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.5",
+    "socket.io": "^2.3.0",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
+    "env-cmd": "^10.1.0",
     "nodemon": "^2.0.2"
   }
 }
