--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "server": "env-cmd -f config/config.env nodemon server.js",
-    "client": "npm start --prefix ../client",
+    "client": "npm start --prefix ./client",
     "dev": "concurrently \"npm run server\"  \"npm run client\"  "
   },
   "author": "",
